# alpha-noah

./: .gitignore  Cargo.toml  LICENSE  README.md  alpha_noah.py  checkers_sim.py  record_weighting_functions.py  set-up.sh  tic_tac_toe_sim.py  visits_weighting_functions.py
sqlite/: set-up.sql
src/: enums.rs  lib.rs  main.rs  structs.rs  traits.rs
src/cli/: interactive_game.rs  simulate_games.rs
src/cli_commands/: enums.rs  interactive_game.rs  mod.rs  simulate_games.rs
src/composites/: game_reports_iterative_processor.rs  mod.rs
src/core/: alpha_noah.rs  mod.rs  state_record.rs  state_record_provider.rs  utilities.rs
src/game_runners/: mod.rs  standard_turn_based_game_runner.rs
src/game_state_records_providers/: in_memory_game_state_records_provider.rs  lru_cache_fronted_game_state_records_provider.rs  mod.rs
src/games/: checkers-old.rs  checkers.rs  mod.rs  tic_tac_toe-old.rs  tic_tac_toe.rs
src/internal/: mod.rs  utility_functions.rs
src/persistence/: cal_state_record_provider.rs  lru_cache_state_record_provider.rs  mod.rs  sqlite_byte_array_log_game_reports_persister.rs  sqlite_byte_array_log_game_reports_processor.rs  sqlite_game_state_records_dal.rs  sqlite_game_state_update_logs_persister.rs  sqlite_state_record_dal.rs  sqlite_state_record_provider.rs  state_record_dal_trait.rs
src/simulating/: mod.rs  standard_simulator.rs
src/training/: mod.rs  sqlite_byte_array_serialized_game_states_trainer.rs  standard_trainer.rs  torch_net_trainer.rs  update_game_state_records.rs
src/turn_takers/: best_weight_selection_turn_taker.rs  mod.rs  (+5 more)
(+31 files in other folders)
