[package]
name = "alpha-noah"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
crossbeam = "0.8.1"
lru = "0.6.6"
rand = "0.8.0"
regex = "1"
rusqlite = {version = "0.25.3", features = ["bundled"]}